--- a/commands/util/lang_util/langs/ja.json
+++ b/commands/util/lang_util/langs/ja.json
@@ -2,6 +2,7 @@
     "data":
     {
         "str_1":"カナードさんの最後のツイートは<%1%>です",
-        "str_error":"エラーが発生しました"
+        "str_error":"エラーが発生しました",
+        "str_2":"このプロジェクトのリンクは <%1%> です"
     }
 }
