--- a/commands/util/lang_util/langs/en.json
+++ b/commands/util/lang_util/langs/en.json
@@ -2,6 +2,7 @@
     "data":
     {
         "str_1":"Cana\\'s last twit is... <%1%>",
-        "str_error":"An Error was occure!"
+        "str_error":"An Error was occure!",
+        "str_2":"Link of this project is... <%1%>"
     }
 }
