--- a/commands/util/lang_util/langs/ko.json
+++ b/commands/util/lang_util/langs/ko.json
@@ -2,6 +2,7 @@
     "data":
     {
         "str_1":"카나드님의 마지막 트윗은 <%1%> 입니다.",
-        "str_error":"에러가 발생하였습니다!"
+        "str_error":"에러가 발생하였습니다!",
+        "str_2":"이 프로젝트의 레포지스트리 : <%1%>"
     }
 }
