번역기능 개선등

--- a/commands/util/lang_util/langs/ja.json
+++ b/commands/util/lang_util/langs/ja.json
@@ -3,6 +3,7 @@
     {
         "str_1":"カナードさんの最後のツイートは<%1%>です",
         "str_error":"エラーが発生しました",
-        "str_2":"このプロジェクトのリンクは <%1%> です"
+        "str_2":"このプロジェクトのリンクは <%1%> です",
+        "str_3":"<%1%>言語を<%2%>で翻訳した結果 : <%3%>"
     }
 }
