--- a/commands/util/lang_util/langs/ko.json
+++ b/commands/util/lang_util/langs/ko.json
@@ -3,6 +3,7 @@
     {
         "str_1":"카나드님의 마지막 트윗은 <%1%> 입니다.",
         "str_error":"에러가 발생하였습니다!",
-        "str_2":"이 프로젝트의 레포지스트리 : <%1%>"
+        "str_2":"이 프로젝트의 레포지스트리 : <%1%>",
+        "str_3":"<%1%>언어를 <%2%>로 번역한 결과 : <%3%>"
     }
 }
