--- a/commands/util/lang_util/langs/en.json
+++ b/commands/util/lang_util/langs/en.json
@@ -3,6 +3,7 @@
     {
         "str_1":"Cana\\'s last twit is... <%1%>",
         "str_error":"An Error was occure!",
-        "str_2":"Link of this project is... <%1%>"
+        "str_2":"Link of this project is... <%1%>",
+        "str_3":"Translate <%1%> by <%2%> : <%3%>"
     }
 }
