--- a/commands/util/lang_util/langs/ja.json
+++ b/commands/util/lang_util/langs/ja.json
@@ -4,6 +4,7 @@
         "str_1":"カナードさんの最後のツイートは<%1%>です",
         "str_error":"エラーが発生しました",
         "str_2":"このプロジェクトのリンクは <%1%> です",
-        "str_3":"<%1%>言語を<%2%>で翻訳した結果 : <%3%>"
+        "str_3":"<%1%>言語を<%2%>で翻訳した結果 : <%3%>",
+        "str_dev" : "すみません。今実行した機能は開発中です。"
     }
 }
