--- a/commands/util/lang_util/langs/ja.json
+++ b/commands/util/lang_util/langs/ja.json
@@ -4,7 +4,8 @@
         "str_1":"カナードさんの最後のツイートは<%1%>です",
         "str_error":"エラーが発生しました",
         "str_2":"このプロジェクトのリンクは <%1%> です",
-        "str_3":"<%1%>言語を<%2%>で翻訳した結果 : <%3%>",
-        "str_dev" : "すみません。今実行した機能は開発中です。"
+        "str_3":"<%1%>言語を<%2%>で翻訳した結果 : \n <%3%>",
+        "str_dev" : "すみません。今実行した機能は開発中です。",
+        "str_tr_help":" Command [出発言語] > [到着言語] [オプション] (ko:韓国語/ja:日本語/en:英語) \n オプションリスト : \n -p:papago 使用\n -help:使用方法"
     }
 }
