--- a/commands/util/lang_util/langs/ko.json
+++ b/commands/util/lang_util/langs/ko.json
@@ -4,7 +4,8 @@
         "str_1":"카나드님의 마지막 트윗은 <%1%> 입니다.",
         "str_error":"에러가 발생하였습니다!",
         "str_2":"이 프로젝트의 레포지스트리 : <%1%>",
-        "str_3":"<%1%>언어를 <%2%>로 번역한 결과 : <%3%>",
-        "str_dev" :"죄송합니다. 현재 이 기능은 개발중입니다."
+        "str_3":"<%1%>언어를 <%2%>로 번역한 결과 : \n <%3%>",
+        "str_dev" :"죄송합니다. 현재 이 기능은 개발중입니다.",
+        "str_tr_help":" Command [출발언어] > [도착언어] [옵션] (ko:한국어/ja:일본어/en:영어) \n 옵션목록 : \n -p:papago 사용\n -help:사용법"
     }
 }
