--- a/commands/util/lang_util/langs/ko.json
+++ b/commands/util/lang_util/langs/ko.json
@@ -4,8 +4,26 @@
         "str_1":"카나드님의 마지막 트윗은 <%1%> 입니다.",
         "str_error":"에러가 발생하였습니다!",
         "str_2":"이 프로젝트의 레포지스트리 : <%1%>",
-        "str_3":"<%1%>언어를 <%2%>로 번역한 결과 : \n <%3%>",
+        "str_3":"<%1%>를 <%2%>로 번역한 결과 : \n <%3%>",
         "str_dev" :"죄송합니다. 현재 이 기능은 개발중입니다.",
-        "str_tr_help":" Command [출발언어] > [도착언어] [옵션] (ko:한국어/ja:일본어/en:영어) \n 옵션목록 : \n -p:papago 사용\n -help:사용법"
+        "str_tr_help":" Command [출발언어] > [도착언어] [옵션] (ko:한국어/ja:일본어/en:영어) \n 옵션목록 : \n -p:papago 사용\n -help:사용법",
+        "str_la_ko" : "한국어",
+        "str_la_ja" : "일본어",
+        "str_la_zh-CN" : "간체 중국어",
+        "str_la_zh-TW" : "번체 중국어",
+        "str_la_hi" : "힌두어",
+        "str_la_en" : "영어",
+        "str_la_es" : "스페인어",
+        "str_la_fr" : "프랑스어",
+        "str_la_de" : "독일어",
+        "str_la_pt" : "포르투갈어",
+        "str_la_vi" : "베트남어",
+        "str_la_id" : "인도네이사어",
+        "str_la_fa" : "페르시아어",
+        "str_la_ar" : "아랍어",
+        "str_la_mm" : "버마어",
+        "str_la_th" : "타이어",
+        "str_la_ru" : "러시아어",
+        "str_la_it" : "이탈리아어"
     }
 }
